<resources>
    <string name="app_name">ExtendedWeatherTitan</string>
    <string name="title">Weather forecast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_title">Weather Forecast</string>
    <string name="home">Back to home</string>
    <string name="actual">Actual Weather</string>
    <string name="five_day">5 Days Forecast</string>
    <string name="more">More</string>
    <string name="search_city">Search City</string>
    <string name="load">Load City</string>
    <string name="save">Save City</string>
    <string name="setting">Settings</string>
    <string name="setting_text">There are no settings yet!</string>
    <string name="about">About</string>
    <string name="about_text">"ABOUT"</string>

    <string name="warning">Warning</string>
    <string name="add_city">Enter City name</string>
    <string name="dialog_message">Do you want to save this city?</string>
    <string name="ok">SAVE</string>
    <string name="cap_search">SEARCH</string>
    <string name="cancel">"Cancel"</string>

    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="wind">Wind force</string>
    <string name="hum">Humidity</string>
    <string name="search">Search</string>

    <string name="empty">Empty slot</string>
    <string name="internet">Internet is not available!</string>
    <string name="nothing">Nothing to save!</string>

    <string name="past">--.-</string>
    <string name="degree"> °</string>
    <string name="celsius"> °C</string>
    <string name="windms"> m/s</string>
    <string name="percent"> %</string>

    <string name="save_dialog_title">Save</string>
    <string name="load_dialog_title">Load</string>
    <string name="no_save">Cannot save here!</string>

    <string name="history">Browser History</string>
    <string name="clear">Clear history</string>

    <string name="battery_temp">Battery temperature: </string>
    <string name="env_temp">Environment temperature: </string>
    <string name="searched">Number of cities: </string>



    <string name="preference_file_key_current">com.p92rdi.extendedweathertitan.CURRENT</string>
    <string name="preference_file_key_forecast">com.p92rdi.extendedweathertitan.FORECAST</string>
    <string name="cant_load">Can\'t load empty slot!</string>
    <string name="not_found_city">Not found city!</string>
    <string name="not_available">Not available </string>>
</resources>
