<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item android:title="@string/actual">
        <menu>
            <item
                android:id="@+id/search"
                android:icon="@drawable/search"
                android:title="@string/search_city" />
            <item
                android:id="@+id/loadCity"
                android:icon="@drawable/load"
                android:title="@string/load" />
            <item
                android:id="@+id/saveCity"
                android:icon="@drawable/save"
                android:title="@string/save" />
        </menu>
    </item>

    <item android:title="@string/five_day">
        <menu>
            <item
                android:id="@+id/search5"
                android:icon="@drawable/search"
                android:title="@string/search_city" />
            <item
                android:id="@+id/loadCity5"
                android:icon="@drawable/load"
                android:title="@string/load" />
            <item
                android:id="@+id/saveCity5"
                android:icon="@drawable/save"
                android:title="@string/save" />
        </menu>
    </item>

</menu>
