<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo100"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.CurrentActivity"
    tools:showIn="@layout/app_bar_current">

    <TextView
        android:id="@+id/cityTextView"
        style="@style/mainTextViewTheme" />

    <LinearLayout
        android:id="@+id/currentLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/weatherImageView"
            android:layout_width="110dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/degreeTextView"
            style="@style/degreeTextViewTheme" />
    </LinearLayout>

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/descriptionTextViewThem" />

    <ScrollView>

        <TableLayout
            android:id="@+id/dataTableLayout"
            style="@style/dataTableLayoutTheme">

            <TableRow
                android:id="@+id/firstTR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/fixMinTV"
                    style="@style/fixedTextViewTheme"
                    android:text="@string/min" />

                <TextView
                    android:id="@+id/minDegTextView"
                    style="@style/dataTextViewTheme" />
            </TableRow>

            <TableRow
                android:id="@+id/secondTR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/fixMaxTV"
                    style="@style/fixedTextViewTheme"
                    android:text="@string/max" />

                <TextView
                    android:id="@+id/maxDegTextView"
                    style="@style/dataTextViewTheme" />
            </TableRow>

            <TableRow
                android:id="@+id/thirdTR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/fixWindTV"
                    style="@style/fixedTextViewTheme"
                    android:text="@string/wind" />

                <TextView
                    android:id="@+id/windTextView"
                    style="@style/dataTextViewTheme" />
            </TableRow>

            <TableRow
                android:id="@+id/fourthTR"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/fixHumTV"
                    style="@style/fixedTextViewTheme"
                    android:text="@string/hum" />

                <TextView
                    android:id="@+id/humidityTextView"
                    style="@style/dataTextViewTheme" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</TableLayout>
